; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/scsi/extr_scsi_ch.c_chclose.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/scsi/extr_scsi_ch.c_chclose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdev = type { i64 }
%struct.thread = type { i32 }
%struct.cam_periph = type { i64 }
%struct.ch_softc = type { i32 }
%struct.mtx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cdev*, i32, i32, %struct.thread*)* @chclose to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @chclose(%struct.cdev* %0, i32 %1, i32 %2, %struct.thread* %3) #0 {
  %5 = alloca %struct.cdev*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.thread*, align 8
  %9 = alloca %struct.cam_periph*, align 8
  %10 = alloca %struct.ch_softc*, align 8
  %11 = alloca %struct.mtx*, align 8
  store %struct.cdev* %0, %struct.cdev** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.thread* %3, %struct.thread** %8, align 8
  %12 = load %struct.cdev*, %struct.cdev** %5, align 8
  %13 = getelementptr inbounds %struct.cdev, %struct.cdev* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to %struct.cam_periph*
  store %struct.cam_periph* %15, %struct.cam_periph** %9, align 8
  %16 = load %struct.cam_periph*, %struct.cam_periph** %9, align 8
  %17 = call %struct.mtx* @cam_periph_mtx(%struct.cam_periph* %16)
  store %struct.mtx* %17, %struct.mtx** %11, align 8
  %18 = load %struct.mtx*, %struct.mtx** %11, align 8
  %19 = call i32 @mtx_lock(%struct.mtx* %18)
  %20 = load %struct.cam_periph*, %struct.cam_periph** %9, align 8
  %21 = getelementptr inbounds %struct.cam_periph, %struct.cam_periph* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = inttoptr i64 %22 to %struct.ch_softc*
  store %struct.ch_softc* %23, %struct.ch_softc** %10, align 8
  %24 = load %struct.ch_softc*, %struct.ch_softc** %10, align 8
  %25 = getelementptr inbounds %struct.ch_softc, %struct.ch_softc* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = add nsw i32 %26, -1
  store i32 %27, i32* %25, align 4
  %28 = load %struct.cam_periph*, %struct.cam_periph** %9, align 8
  %29 = call i32 @cam_periph_release_locked(%struct.cam_periph* %28)
  %30 = load %struct.mtx*, %struct.mtx** %11, align 8
  %31 = call i32 @mtx_unlock(%struct.mtx* %30)
  ret i32 0
}

declare dso_local %struct.mtx* @cam_periph_mtx(%struct.cam_periph*) #1

declare dso_local i32 @mtx_lock(%struct.mtx*) #1

declare dso_local i32 @cam_periph_release_locked(%struct.cam_periph*) #1

declare dso_local i32 @mtx_unlock(%struct.mtx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
